<resources>
    <string name="app_name">youtubeHome</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_main_layout">chat qwerty</string>
    <string name="welcomeToChat">Добро пожаловать в чат qwerty</string>
    <string name="welcomeToChatButton">принять и продолжить</string>
    <string name="welcomeToChat_2">Нажмите на принять и продалжить чтобы согласиться с </string>
    <string name="welcomeToChat_3">Правилами пользования политикой конфидициальности</string>
    <string name="forLoginPhoneNumber">Введите свой номер телефона</string>
    <string name="edit_yourInfo">Hомер телефона</string>
    <string name="hintText_forLoginPhoneNumber">chat qwerty отправит СМС сообщение, чтобы подтвердить ваш номер телефона</string>
    <string name="hintText_forPhone">мобильный оператор может взымать плату за смс</string>
    <string name="button_to_login">далее</string>
    <string name="parole">пароль</string>
    <string name="email">email</string>
    <string name="exit_item">Выход</string>
    <string name="search_item">Поиск</string>
    <string name="settings_item">Настройки</string>
    <string name="create_message">Введите сообщение</string>
    <string name="create_new_group_item">Новая группа</string>
    <string name="button_back_privacy">назад</string>
    <string name="button_to_verification">подтвердить</string>
    <string name="next">войти</string>
    <string name="register_for_email">регистрация по email</string>
    <string name="textFor_registration">Уже есть аккаунт? Войти</string>
    <string name="register">регистрация</string>
    <string name="text_master_privacy">правила пользования и политика конфидециальности</string>
    <string name="settings_username">UserName</string>
    <string name="settings_usernick">UserNick</string>
    <string name="settings_userStatus">Hi there, I`m Using Chat Qwerty</string>
    <string name="save">Сохранить</string>
    //https://docs.google.com/document/d/1dHhoNBivxOaNm9aXTA-Tvg3-f1z6lU924W32Hm98nao/edit?usp=sharing
</resources>