<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemExit"
        android:orderInCategory="100"
        android:title="@string/exit_item" />

    <item
        android:id="@+id/search_bar"
        android:orderInCategory="2"
        android:title="@string/search_item"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"/>

    <item
        android:id="@+id/settings_item"
        android:orderInCategory="2"
        android:title="@string/settings_item" />

    <item
        android:id="@+id/create_group_item"
        android:orderInCategory="2"
        android:title="@string/create_new_group_item" />
</menu>