<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/master_color"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:visibility="visible"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/parole"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_next_button"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_color"
            android:paddingHorizontal="50dp"
            android:shadowDx="12"
            android:shadowDy="12"
            android:shadowRadius="10"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_next_button"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:background="@drawable/button_color"
            android:paddingHorizontal="30dp"
            android:shadowDx="12"
            android:shadowDy="12"
            android:shadowRadius="10"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/change_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textFor_registration" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>